# Data

./: .gitmodules  cal_pnl.txt  ddb.license.txt  file.py  haha.csv  lin_model_allfac_test_withfuture_1m_510300.SH  lin_model_allfac_test_withfuture_1m_510310.SH  main.cpp  ricequant.license.txt
FlowDataSystem/: CMakeLists.txt
FlowDataSystem/include/core/: MarketDataTypes.hpp  MultiDimData.hpp  Utils.hpp  function.hpp  talibfunction.hpp
FlowDataSystem/include/factor/: base.hpp  factorBuilder.hpp  factorFactory.hpp
FlowDataSystem/include/factor/fund_factors/: AlligatorTeeth_factor.hpp  AroonDown_factor.hpp  AwesomeOsc_factor.hpp  DEMA_factor.hpp  DeriPBid1_factor.hpp  HCP_factor.hpp  HCVOL_factor.hpp  LCP_factor.hpp  LCVOL_factor.hpp  OB_price_2derivative_tsrank_factor.hpp  OB_price_spread_tsrank_factor.hpp  TSI_factor.hpp  best_v_imbalance_tsrank_factor.hpp  bs_power_rough_factor.hpp  bs_td_power_rough_factor.hpp  bs_v5_tsrank_factor.hpp  can_en_v_ratio_factor.hpp  can_en_v_ratio_tsrank_factor.hpp  close_adjusted_factor.hpp  close_factor.hpp  close_ret_factor.hpp  ct_b_med_tsrank_factor.hpp  en_b_p10_tsrank_factor.hpp  en_b_price_std_factor.hpp  en_b_price_tsrank_factor.hpp  en_b_ret10_tsrank_factor.hpp  en_b_sumprice_tsrank_factor.hpp  en_bs_price_diff_factor.hpp  en_buy_and_sell_vol_rela_ratio_factor.hpp  en_s_p10_tsrank_factor.hpp  en_s_price_tsrank_factor.hpp  en_s_ret10_tsrank_factor.hpp  en_s_ret5_tsrank_factor.hpp  en_s_sumprice_tsrank_factor.hpp  en_v_order_inbalance_factor.hpp  ohlc_rat_factor.hpp  pv_corr_factor.hpp  ret_avgvol_corr_factor.hpp  ret_kurt_factor.hpp  ret_n_corr_factor.hpp  (+16 more)
FlowDataSystem/include/factor/future_factors/: APO_future_factor.hpp  ATR_future_factor.hpp  AlligatorLips_future_factor.hpp  AroonOsc_future_factor.hpp  DPO_future_factor.hpp  DeriPBid1_future_factor.hpp  Detrend2_future_factor.hpp  KeltnerChannelLower_future_factor.hpp  LI_future_factor.hpp  MACD_future_factor.hpp  Momentum_future_factor.hpp  OB_price_2derivative_future_factor.hpp  RSI_future_factor.hpp  STOCHRSIfastd_future_factor.hpp  STOCHRSIfastk_future_factor.hpp  TRIMA_future_factor.hpp  VLI_future_factor.hpp  WCL_future_factor.hpp  WILLR_future_factor.hpp  best_v_imbalance_tsrank_future_factor.hpp  bs_power_rough_future_factor.hpp  bs_pv1_tsrank_future_factor.hpp  clh_delta_future_factor.hpp  clh_future_factor.hpp  en_b_p10_tsrank_future_factor.hpp  en_b_price_std_future_factor.hpp  en_b_price_tsrank_future_factor.hpp  en_bs_price_diff_future_factor.hpp  en_s_price_tsrank_future_factor.hpp  en_s_sumprice_ratio_future_factor.hpp  pv_corr_future_factor.hpp  ret_v_corr_future_factor.hpp  ret_v_prod_future_factor.hpp  td_p_v_ratio_future_factor.hpp  td_ret_v_prod_future_factor.hpp  trade_vol_in_high_price_future_factor.hpp
FlowDataSystem/include/feature/: featureBuilder.hpp  featureBuilderBase.hpp  futureFeatureBuilder.hpp
FlowDataSystem/src/: CMakeLists.txt  bindings.cpp
FlowDataSystem/src/core/: MultiDimData.cpp  Utils.cpp  function.cpp  talibfunction.cpp
FlowDataSystem/src/factor/: factorBuilder.cpp  factorFactory.cpp
FlowDataSystem/src/feature/: featureBuilder.cpp  featureBuilderBase.cpp  futureFeatureBuilder.cpp
FlowDataSystem/tests/: CMakeLists.txt  factors.yml  test_MultiDimData.cpp  test_main.cpp
PybindTest/: CMakeLists.txt  main.cpp
TALIBTest/: CMakeLists.txt  main.cpp
YAMLTest/: CMakeLists.txt  main.cpp
data_process_params/: 159629.SZ.yml  159633.SZ.yml  159673.SZ.yml  159820.SZ.yml  159845.SZ.yml  159919.SZ.yml  159922.SZ.yml  159925.SZ.yml  159968.SZ.yml  160119.SZ.yml  162711.SZ.yml  510300.SH.yml  510310.SH.yml  510330.SH.yml  510350.SH.yml  510360.SH.yml  510380.SH.yml  510390.SH.yml  510500.SH.yml  510510.SH.yml  510580.SH.yml  510590.SH.yml  512100.SH.yml  512500.SH.yml  512510.SH.yml  515330.SH.yml  515380.SH.yml  515390.SH.yml  515660.SH.yml  560010.SH.yml  561300.SH.yml  561990.SH.yml
factor/: factor_builder.py  factor_func.py  factor_loader.py  factors_config.yml
factor/factors/: generate_file.py  price_factor.py
factor/factors/generated_factors/: AlligatorTeeth_factor.hpp  AroonDown_factor.hpp  AwesomeOsc_factor.hpp  DEMA_factor.hpp  DeriPBid1_factor.hpp  HCP_factor.hpp  HCVOL_factor.hpp  LCP_factor.hpp  LCVOL_factor.hpp  OB_price_2derivative_tsrank_factor.hpp  OB_price_spread_tsrank_factor.hpp  TSI_factor.hpp  best_v_imbalance_tsrank_factor.hpp  bs_power_rough_factor.hpp  bs_td_power_rough_factor.hpp  bs_v5_tsrank_factor.hpp  can_en_v_ratio_factor.hpp  can_en_v_ratio_tsrank_factor.hpp  close_adjusted_factor.hpp  close_ret_factor.hpp  ct_b_med_tsrank_factor.hpp  en_b_p10_tsrank_factor.hpp  en_b_price_std_factor.hpp  en_b_price_tsrank_factor.hpp  en_b_ret10_tsrank_factor.hpp  en_b_sumprice_tsrank_factor.hpp  en_bs_price_diff_factor.hpp  en_buy_and_sell_vol_rela_ratio_factor.hpp  en_s_p10_tsrank_factor.hpp  en_s_price_tsrank_factor.hpp  en_s_ret10_tsrank_factor.hpp  en_s_ret5_tsrank_factor.hpp  en_s_sumprice_tsrank_factor.hpp  en_v_order_inbalance_factor.hpp  ohlc_rat_factor.hpp  pv_corr_factor.hpp  ret_avgvol_corr_factor.hpp  ret_kurt_factor.hpp  ret_n_corr_factor.hpp  ret_skew_factor.hpp  (+15 more)
factor/factors/generated_future_factors/: APO_future_factor.hpp  ATR_future_factor.hpp  AlligatorLips_future_factor.hpp  AroonOsc_future_factor.hpp  DPO_future_factor.hpp  DeriPBid1_future_factor.hpp  Detrend2_future_factor.hpp  KeltnerChannelLower_future_factor.hpp  LI_future_factor.hpp  MACD_future_factor.hpp  Momentum_future_factor.hpp  OB_price_2derivative_future_factor.hpp  RSI_future_factor.hpp  STOCHRSIfastd_future_factor.hpp  STOCHRSIfastk_future_factor.hpp  TRIMA_future_factor.hpp  VLI_future_factor.hpp  WCL_future_factor.hpp  WILLR_future_factor.hpp  best_v_imbalance_tsrank_future_factor.hpp  (+16 more)
factor/future_factors/: factor.py
feature/: feature_builder.py  future_feature_builder.py
holidaysTable/: createTable.dos  holiday_2023.dos  holiday_2024.dos  holiday_2025.dos
model_file/: lin_model_allfac_test_withfuture_1m_510300.SH.pkl  lin_model_allfac_test_withfuture_1m_510310.SH  lin_model_allfac_test_withfuture_1m_510310.SH.pkl
